...
extension SignupViewController: SignupViewDelegateProtocol {
    
    func successfullSignup() {
        
        createAlertDialog(title: "Success",
                          message: "The signup operation was successful",
                          accessibilityIdentifier: "successAlertDialog")
        
    }
    
    func errorHandler(error: SignupErrors) {
        
        createAlertDialog(title: "Error",
                          message: "Your request could not be processed at this time.",
                          accessibilityIdentifier: "errorAlertDialog")
    }
    
    private func createAlertDialog(title: String, message: String, accessibilityIdentifier: String) {
        
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        
...
